# crtv3

./: .env.example  .env.sample  .eslintrc.json  .gitignore  .gitmodules  .npmrc  .swcrc  .yarnrc  AI_IPFS_CHANGES_SUMMARY.md  AI_IPFS_INTEGRATION.md  ALCHEMY_METOKEN_IMPLEMENTATION.md  ALLOWANCE_FIX_CHANGES_SUMMARY.md  BUILD_ERROR_FIX.md  BUNDLER_FIX_RECOMMENDATIONS.md  CHAT_COMMENTS_IMPLEMENTATION.md  CLIENT_SERVER_BOUNDARY_FIX.md  COMMENT_LIKES_RLS_SECURITY_FIX.md  COMPLETE_SOLUTION_JOURNEY.md  CONSOLE_ERROR_FIXES.md  CONSOLE_REPLACEMENT_PATTERNS.md  CONSOLE_REPLACEMENT_PROGRESS.md  CREATOR_OWNERSHIP_PATTERN.md  CRITICAL_ALLOWANCE_FIX_SUMMARY.md  DELETE_AND_REDEPLOY_SUBGRAPH.md  DEPLOY_NEW_SUBGRAPH_VERSION.md  DEPLOY_SUBGRAPH_FROM_ABI.md  EIP2981_ROYALTIES.md  EIP5792_SENDCALLS_FIX.md  EIP712_META_TRANSACTIONS.md  ENS_TIMEOUT_FIX.md  ENVIRONMENT_SETUP.md  ERROR_FIXES_SUMMARY.md  FACTORY_INTEGRATION_SUMMARY.md  FACTORY_PATTERN_IMPLEMENTATION.md  FILECOIN_FIRST_INTEGRATION.md  FILE_UPLOAD_MIME_TYPE_FIX.md  FINAL_FIX_SUMMARY.md  GOLDSKY_MIGRATION_SUMMARY.md  GOLDSKY_SECRET_CREATE_STEPS.md  GOLDSKY_SECRET_CREATION.md  (+148 more)
app/tools/: Cargo.toml
app/tools/backend_ui/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
app/tools/backend_ui/src/: App.css  App.tsx  main.tsx
app/tools/backend_ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/tools/backend_ui/src-tauri/src/: main.rs
app/tools/backend_ui/src/components/: Menu.tsx  ThreeJsBackground.tsx
app/tools/backend_ui/src/context/: AuthContext.tsx
app/tools/src/: commands.rs  main.rs
(+1914 files in other folders)
