[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2" }
jsonwebtoken = "8"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
kube = { version = "0.85", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18", features = ["v1_24"] }
